--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,16 +28,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
+  flutter_native_splash: ^2.4.0
   pin_code_fields: ^8.0.1
   shared_preferences: ^2.2.3
-  
-
 dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_test:
