--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.4.0
+  flutter_svg: ^2.0.10+1
   pin_code_fields: ^8.0.1
   shared_preferences: ^2.2.3
 dev_dependencies:
