--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.4.0
+  flutter_slider_drawer: ^2.1.3
   flutter_svg: ^2.0.10+1
   pin_code_fields: ^8.0.1
   shared_preferences: ^2.2.3
@@ -55,6 +56,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/rive/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
